src/test/deca/syntax/invalid/SansObjet/DeclVar-Resrved1.deca
// Description:
//    Variable declaration using reserved token
//
// Results:
//    Parser error on print line 11
//
// Historique:
//    cree le 11/01/2022

{
        float print;
}
